syntax = "proto3";
package api.v1.proto;
import "google/protobuf/empty.proto";
import "google/api/annotations.proto";
option go_package = "github.com/e1esm/LyrVibe/auth-service/api/v1/proto";


message SignUpRequest{
  string username = 1;
  string password = 2;
  string role = 3;
  string country = 4;
  string image = 5;
  string firstName = 6;
  string secondName = 7;
}

message SignUpResponse{
  RequestStatus status = 1;
  string username = 2;
}

message SignInRequest{
  string username = 1;
  string password = 2;
}

message SignInResponse{
  RequestStatus status = 1;
  CachedTokens tokens = 2;
}

message CachedTokens{
  string AccessToken = 1;
  string RefreshToken = 2;
}

message RequestStatus{
  string requestStatus = 1;
  string errorMessage = 2;
}

message LogoutRequest{
  string username = 1;
}

message IdentifyRequest{
  string access_token = 1;
}
message IdentifyResponse{
  string user_id = 1;
  string role = 2;
}

service AuthService{
  rpc SignUp(SignUpRequest) returns (SignUpResponse){
    option (google.api.http) = {
      post: "/v1/auth/signup"
      body: "*"
    };
  };
  rpc SignIn(SignInRequest) returns (SignInResponse) {
    option (google.api.http) = {
      post: "/v1/auth/login"
      body: "*"
    };
  }
  rpc Logout(LogoutRequest) returns (google.protobuf.Empty){
    option (google.api.http) = {
      post: "/v1/auth/logout"
      body: "*"
    };
  }
  rpc Identify(IdentifyRequest) returns(IdentifyResponse){};
}